--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 
     <!-- Java Script -->
     <script src="./js/background.js"></script>
+    <script src="./js/clock.js"></script>
   </body>
 </html>
