--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>mini project</title>
   </head>
   <body>
@@ -12,12 +13,12 @@
 
     <!-- log in -->
     <form id="login-form">
-      <input type="text" id="name" />
-      <input type="button" value="Log In" />
+      <input type="text" id="name" required />
+      <input type="submit" value="Log In" />
     </form>
 
     <!-- to do 입력공간 -->
-    <form id="todo-form">
+    <form id="todo-form" class="hidden">
       <h1 id="title">반갑습니다</h1>
       <input type="text" id="todo" />
       <input type="button" value="추가" />
@@ -35,5 +36,6 @@
     <!-- Java Script -->
     <script src="./js/background.js"></script>
     <script src="./js/clock.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
