--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <input type="button" value="추가" />
     </form>
 
-    <!-- to do form 출력 -->
+    <!-- to do board 출력 -->
     <ul id="todo-board">
       <li>
         <input type="checkbox" />
@@ -37,5 +37,6 @@
     <script src="./js/background.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/todoList.js"></script>
   </body>
 </html>
